SOME REACT STEPS

--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,8 +1,14 @@
-# השתמש בשרת Nginx קל
+# שלב 1: בנייה (Build)
+FROM node:18-alpine AS build
+WORKDIR /app
+COPY package*.json ./
+RUN npm install
+COPY . .
+RUN npm run build
+
+# שלב 2: הגשה (Serving)
 FROM nginx:alpine
-
-# העתקת קבצי ה-HTML, CSS ו-JS לתיקיית ההגשה של Nginx
-COPY . /usr/share/nginx/html/
-
-# חשיפת פורט 80 (סטנדרט לאינטרנט)
+# העתקת התוצר הסופי של React לתיקייה של Nginx
+COPY --from=build /app/dist /usr/share/nginx/html/
 EXPOSE 80
+CMD ["nginx", "-g", "daemon off;"]
