--- a/server/package.json
+++ b/server/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "node --watch src/server.js"
+    "start": "node --watch src/server.js",
+    "test": "jest"
   },
   "type": "module",
   "keywords": [],
@@ -13,5 +14,8 @@
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
     "express": "^5.2.1"
+  },
+  "devDependencies": {
+    "jest": "^30.2.0"
   }
 }
