--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,13 +19,19 @@ jobs:
         with:
           node-version: '20'
           cache: 'npm'
-          cache-dependency-path: package-lock.json
+          # תיקון: הנתיב ל-package-lock בתוך תיקיית השרת
+          cache-dependency-path: server/package-lock.json
 
       - name: Install Dependencies
-        run: npm ci
+        # תיקון: כניסה לתיקיית השרת לפני ההתקנה
+        run: |
+          cd server
+          npm ci
 
       - name: Run Unit Tests
-        run: npm test
+        # תיקון: הרצת הטסטים מתוך תיקיית השרת
+        run: |
+          cd server
+          npm test
         env:
-          # זהו המפתח הסודי שנגדיר בגיטהאב
           GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
